tests/NormalTests/paczka1/fuzzy1/90085951.err
Error in line 1: 9obK A206 9,5
Error in line 2: 9obK A329 33,2
Error in line 13: PaReVIEyg5 S497 20,8
Error in line 32: 9obK S497 69,5
Error in line 37: 9obK A206 185,8
